Refactor code structure for improved readability and maintainability

--- a/data/package.json
+++ b/data/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "promptdj-midi",
+  "name": "promptdj",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.0.0",
-    "lit": "^3.3.0"
+    "lit": "^3.3.0",
+    "@google/genai": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
